<resources>
    <string name="app_name">ModelsofNavigationwithFragment</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="string_team_main">Udacity</string>
    <string name="string_correo">udacity@gmail.com</string>
    <string name="string_home">Home</string>
    <string name="string_course">Courses</string>
    <string name="string_instructor">Instructor</string>
    <string name="string_home_page">Home Page</string>
    <string name="string_welcome">Welcome to Udacity App</string>
    <string name="string_fragment_iinstructor">Fragment Instructor</string>
    <string name="fragment_home_page">Home Page</string>
    <string name="string_welcome_to">Welcome to UDACITY</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logout">Cerrar</string>
</resources>
